# Tools

./: .gitignore  logs.lnk
Agente_Independente/1/: Makefile  README_INTEGRACAO.md  arquivo_20260525_012801.json  backend.py  main.py  pyproject.toml  requirements.txt  test_agente.bat  test_agente.ps1  test_broken.py
Agente_Independente/1/Obsoleto/: backend_V02.py
Agente_Independente/1/src/: agent_v2.py  backend.bat  backend.py  main.py
Agente_Independente/1/src/Obsoleto/: backend_V01.py  backend_V03.py  backend_V04.py
Agente_Independente/1/src/analyser/: __init__.py  analyzer.py
Agente_Independente/1/src/analyser/Obsoleto/: __init___V01.py
Agente_Independente/1/src/fixer/: __init__.py  core_v2.py  core_v3_final.py  llm_integration.py  test_interface_adapta_communication.py
Agente_Independente/1/src/fixer/Obsoleto/: core_V02.py
Agente_Independente/1/src/guardrails/: guardrails.py
Agente_Independente/1/src/modulos/Modulo 2/0/: README.docx  expert_core.py
Agente_Independente/1/src/modulos/Modulo 3/0/: README.md  __init__.py  requirements.txt  setup.py
Agente_Independente/1/src/modulos/Modulo 3/0/utils/: __init__.py
Agente_Independente/1/src/modulos/Modulo 4/0/: requirements.txt  setup.py
Agente_Independente/1/src/patches/: __init__.py  executor.py  models.py
Agente_Independente/1/src/patches/Obsoleto/: __init___V01.py  __init___V02.py  executor_V01.py
Agente_Independente/1/src/utils/: __init__.py  logger.py
Agente_Independente/1/src/validador/: __init__.py  compatibility_validator.py  validators.py
Agente_Independente/1/tests/: test_main.py
(+260 files in other folders)
